Upgrade to finagle 6.28.0